Added first set of files.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <doctype !HTML>
 <html>
+	<script src="js/library/jquery.js"></script>
+	<script src="js/constants.js"></script>
+	<script src="js/arena.js"></script>
+	<script src="js/executor.js"></script>
 	<body>
-		<h1>TETRIS..</h1>
+		<table id="tableTetris">
+		</table>
 	</body>
 </html>
