Added code enough to create arena

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <doctype !HTML>
 <html>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script src="js/library/jquery.js"></script>
 	<script src="js/constants.js"></script>
 	<script src="js/arena.js"></script>
