--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <doctype !HTML>
 <html>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script src="js/library/jquery.js"></script>
-	<script src="js/constants.js"></script>
-	<script src="js/arena.js"></script>
-	<script src="js/executor.js"></script>
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<script src="js/library/jquery.js"></script>
+		<script src="js/constants.js"></script>
+		<script src="js/arena.js"></script>
+		<script src="js/executor.js"></script>
+	</head>
 	<body>
 		<table id="tableTetris">
 		</table>
