--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<doctype !HTML>
+<!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script src="js/library/jquery.js"></script>
 		<script src="js/constants.js"></script>
 		<script src="js/arena.js"></script>
