Added ready-duty to clean the executor code up..

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script src="js/library/jquery.js"></script>
 		<script src="js/constants.js"></script>
+		<script src="js/ready-duty.js"></script>
 		<script src="js/arena.js"></script>
 		<script src="js/executor.js"></script>
 	</head>
 	<body>
-		<table id="tableTetris">
-		</table>
+		<table id="tableTetris"></table>
 	</body>
 </html>
