Added dom elements and css to make arena look better..

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<script src="js/executor.js"></script>
 	</head>
 	<body>
-		<table id="tableTetris"></table>
+		<div class="wrapper relativeElement">
+			<div class="scoreBoard floatRight heightHundred"></div>
+			<table id="tableTetris" class="floatRight heightHundred"></table>
+		</div>
 	</body>
 </html>
