--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+		<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 		<script src="js/library/jquery.js"></script>
 		<script src="js/constants.js"></script>
 		<script src="js/ready-duty.js"></script>
@@ -10,7 +11,9 @@
 	</head>
 	<body>
 		<div class="wrapper relativeElement">
-			<div class="scoreBoard floatRight heightHundred"></div>
+			<div class="scoreBoard floatRight heightHundred">
+				<h1 class="gameTitle">TETRIS</h1>
+			</div>
 			<table id="tableTetris" class="floatRight heightHundred"></table>
 		</div>
 	</body>
