Play,pause,stop button added to the UI

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 					<div class="highScore">HIGH SCORE : <span>00000</span></div>
 				</div>
 				<div class="internalWrappers playWrapper">
-					<i id="play" class="fa fa-play-circle"></i>
+					<i class="fa fa-play-circle"></i>
+					<i class="fa fa-pause-circle"></i>
+					<i class="fa fa-stop-circle"></i>
 				</div>
 			</div>
 			<table id="tableTetris" class="floatRight heightHundred"></table>
