Disable feature added, animation fixed.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 					<div class="highScore">HIGH SCORE : <span>00000</span></div>
 				</div>
 				<div class="internalWrappers playWrapper">
-					<i class="fa fa-play-circle"></i>
-					<i class="fa fa-pause-circle"></i>
-					<i class="fa fa-stop-circle"></i>
+					<i class="fa fa-play-circle" title="Play"></i>
+					<i class="fa fa-pause-circle disabled" title="Pause"></i>
+					<i class="fa fa-stop-circle disabled" title="Stop"></i>
 				</div>
 			</div>
 			<table id="tableTetris" class="floatRight heightHundred"></table>
