Dev details added and corrected html alignments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="wrapper relativeElement">
-			<div class="scoreBoard floatRight heightHundred">
+			<div class="scoreBoard floatRight heightHundred relativeElement">
 				<div class="internalWrappers gameTitleWrapper">
 					<h1 class="gameTitle">TETRIS</h1>
 				</div>
@@ -27,6 +27,9 @@
 					<i class="fa fa-play-circle" title="Play"></i>
 					<i class="fa fa-pause-circle disabled" title="Pause"></i>
 					<i class="fa fa-stop-circle disabled" title="Stop"></i>
+				</div>
+				<div class="internalWrappers devDetailsWrapper">
+					<div class="devName">Developer : Prabhu</div>
 				</div>
 			</div>
 			<table id="tableTetris" class="floatRight heightHundred"></table>
