Score board design part finished with full satisfication

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 					<i class="fa fa-stop-circle disabled" title="Stop"></i>
 				</div>
 				<div class="internalWrappers devDetailsWrapper">
-					<div class="devName">Developer : Prabhu</div>
+					<div class="devName">
+						<a target="_blank" href="http://stackoverflow.com/users/1209018/rajaprabhu-aravindasamy">
+						Developer : Prabhu
+						</a>
+					</div>
 				</div>
 			</div>
 			<table id="tableTetris" class="floatRight heightHundred"></table>
