--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
 					<i class="fa fa-stop-circle disabled" title="Stop"></i>
 				</div>
 				<div class="internalWrappers devDetailsWrapper">
+					<div class="controls">
+						<a href="#">
+							<i class="fa fa-gamepad" aria-hidden="true"></i><span>Controls</span>
+						</a>
+					</div>
 					<div class="devName">
 						<a target="_blank" href="http://stackoverflow.com/users/1209018/rajaprabhu-aravindasamy">
-						Developer : Prabhu
+							<span>Developer</span><span>Prabhu</span>
 						</a>
 					</div>
 				</div>
