--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 		<script src="js/constants/selector-constants.js"></script>
 		<script src="js/constants/data-constants.js"></script>
 		<script src="js/constants/util-constants.js"></script>
+		<script src="js/events/implementations.js"></script>
+		<script src="js/events/mouse-events.js"></script>
+		<script src="js/events/key-events.js"></script>
+		<script src="js/environment/arena.js"></script>
 		<script src="js/life-cycle-events/load-duty.js"></script>
 		<script src="js/life-cycle-events/ready-duty.js"></script>
-		<script src="js/environment/arena.js"></script>
 		<script src="js/executor.js"></script>
 	</head>
 	<body>
