Refactored the code and given life to play pause stop buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		-->
 		<script src="js/library/jquery.js"></script>
 		<script src="js/constants/selector-constants.js"></script>
+		<script src="js/constants/selector-string-constants.js"></script>
+		<script src="js/constants/class-constants.js"></script>
 		<script src="js/constants/data-constants.js"></script>
 		<script src="js/constants/util-constants.js"></script>
 		<script src="js/events/implementations.js"></script>
@@ -46,9 +48,9 @@
 					<div class="highScore">HIGH SCORE : <span>00000</span></div>
 				</div>
 				<div class="internalWrappers playWrapper">
-					<i class="fa fa-play-circle" title="Play"></i>
-					<i class="fa fa-pause-circle disabled" title="Pause"></i>
-					<i class="fa fa-stop-circle disabled" title="Stop"></i>
+					<i class="fa fa-play-circle play" title="Play"></i>
+					<i class="fa fa-pause-circle disabled pause" title="Pause"></i>
+					<i class="fa fa-stop-circle disabled stop" title="Stop"></i>
 				</div>
 				<div class="internalWrappers devDetailsWrapper">
 					<div class="controls">
