--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<script src="js/constants/class-constants.js"></script>
 		<script src="js/constants/data-constants.js"></script>
 		<script src="js/constants/util-constants.js"></script>
+		<script src="js/game/block.js"></script>
+		<script src="js/game/game.js"></script>
 		<script src="js/events/implementations.js"></script>
 		<script src="js/events/mouse-events.js"></script>
 		<script src="js/events/key-events.js"></script>
