--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<a href="#"><i class="fa fa-gamepad" aria-hidden="true"></i><span>Controls</span></a>
 					</div>
 					<div class="devName">
-						<a target="_blank" href="http://stackoverflow.com/users/1209018/rajaprabhu-aravindasamy"><span>Developer</span><span>Prabhu</span></a>
+						<a target="_blank" href="http://stackoverflow.com/users/1209018/rajaprabhu-aravindasamy"><span>Architect - </span><span>Prabhu</span></a>
 					</div>
 				</div>
 			</div>
