game over logic written and tested. UI for it also designed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<div><span>up</span> Key to change the block to its next shape</div>
 					<div><span>left</span> Key to move the block leftwards</div>
 					<div><span>right</span> Key to move the block rightwards</div>
+					<div class="gameover"><span>GAME OVER!!</span></div>
 					<div><span><i class="fa fa-thumbs-up" aria-hidden="true"></i> GOT IT</span></div>
 				</div>
 			</div>
